--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
 
 .dark body {
   background-color: #16161a;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 :root {
